test/Execute/SyntaxErrorTest/def_missing_return_type_arrow.typh
def add(x: int) int {
    return x
}
